# phmutest

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  checklist.txt  code_of_conduct.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: broken_examples.sh  build.yml  ci.yml  coverage.sh  coverage.yml  dev.yml  publish.yml  wheel.yml
dev/: ci.bat  ci.sh  requirements_dev.txt  runcoverage.bat  runcoverage.sh
docs/: advanced.md  answerlib.py  answerlib_py.md  api.md  callfrompython.md  codemode.md  demos.md  fixture_py.md  generated_project_py.md  generated_share_demo_py.md  howitworks.md  junit.md  make_wrapped_examples.py  navlinks.py  premkdocs.py  quicklinks.py  recent_changes.md  replmode.md  sessionmode.md  traceback.md
docs/advanced/: label.md  labelanyfcb.md  skip.md  skipif.md
docs/fix/code/: chdir.md  chdir.py  chdir_py.md  globdemo.md  globdemo.py  globdemo_py.md  textfile.txt
docs/group/: deselect.md  select.md
docs/repl/: REPLexample.md  repl1.md  repl2.md  repl3.md  replshare_demo.md
docs/setup/: across1.md  across2.md  setup.md
docs/share/: file1.md  file2.md  file3.md  share_demo.md
src/phmutest/: __main__.py  cases.py  code.py  color.py  config.py  direct.py  fcb.py  fenced.py  fillin.py  fixture.py  globs.py  importer.py  main.py  printer.py  reader.py  select.py  session.py  skip.py  subtest.py  summary.py  syntax.py  systool.py  tool.py
tests/: check_classifiers.py  conftest.py  requirements_inspect.txt  test_api.py  test_cases.py  test_code.py  test_color.py  test_config.py  test_direct.py  test_dist.py  test_docs.py  test_errors.py  test_examples.py  test_extra_args.py  test_fcb.py  test_fenced.py  test_generate.py  test_globs.py  test_importer.py  test_patching.py  test_reader.py  test_rebind.py  test_select.py  test_session.py  test_sharing.py  test_skip.py  test_stdout.py  test_subprocess.py  test_summary.py  test_tool.py  test_traceback.py  test_type_packaging.py  test_wrapped_python_files.py
tests/doctest/: generated_replmode.txt
tests/fail/: bumper.py  raiser.md
tests/md/: bad_session_output.md  bad_skipif_number.md  badsetup.md  badteardown.md  cases.md  cleanups.md  code_groups.md  directive1.md  directive2.md  directives.md  does_not_print.md  example2.md  extra_line_in_output.md  legacy_directives.md  missing_some_output.md  more_directives.md  multi_label.md  no_code_blocks.md  no_fenced_code_blocks.md  nopythonmatch.md  noreadernodes.md  one_mark_skip.md  optionflags.md  output_has_blank_lines.md  output_info_string.md  patching1.md  printer.md  project.md  pythonmatch.md  qualname.md  reader.md  readerfcb.md  replerror.md  report.md  setupnoteardown.md  setupto.md  sharedto.md  sharedto2.md  shareimports1.md  shareimports2.md  (+3 more)
tests/py/: generated_project.py  generated_sharedemo.py
tests/toml/: acrossfiles.toml  acrossfiles2.toml  badacrossfiles.toml  badgroup.toml  badrunpytest.toml  chdir.toml  color.toml  excludeglobs.toml  filenotexists1.toml  filenotexists2.toml  groupa.toml  groupb.toml  nokeys.toml  project.toml  projectrepl.toml  pytest_command.toml  runpytest.toml  sample_pyproject.toml  setup_across_not_in_files.toml  share_across_not_in_files.toml  style-is-material.toml
(+3 files in other folders)
